<resources>
    <string name="app_name">ACOBooking</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">User name</string>
    <string name="pref_default_display_name">Phily</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_qos_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_connect_mqtt">Connect to MQTT Server?
    </string>
    <string name="pref_title_connect_mqtt">Connect to MQTT Server?</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>


    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_server_url">MQTT Server</string>
    <string name="pref_title_server_port">Server Port(Optional)</string>
    <string name="pref_title_qos">Message QoS</string>
    <string name="pref_title_topic_event">Topic - Event</string>
    <string name="title_activity_events">Event List</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>


    <string name="sans_serif">sans-serif</string>
    <string name="sans_serif_light">sans-serif-light</string>
    <string name="sans_serif_black">sans-serif-black</string>
    <string name="sans_serif_medium">sans-serif-medium</string>

    <string name="error">Error</string>

    <string name="search_repositories">Search repositories…</string>
    <string name="search_repositories_error">Error performing search, disabling search field.</string>
</resources>
